--- a/styles/Beamer/hu-beamer-includes-pdflatex.sty
+++ b/styles/Beamer/hu-beamer-includes-pdflatex.sty
@@ -82,6 +82,10 @@ langsci-lgr,oneline}
 %\usepackage{forest-v105}
 \usepackage{langsci-forest-setup}
 
+\usetikzlibrary{hobby}
+\usetikzlibrary{calc}
+
+
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %% (Syntactic) Trees
 % package needed: forest
