--- a/formgram-include.tex
+++ b/formgram-include.tex
@@ -93,7 +93,9 @@ St.Mueller@hu-berlin.de}
 \include{formgram-xbar}
 % \exewidth{(145)}
 \include{formgram-gb}
-%\include{formgram-gb2}
+\include{formgram-gb2}
+\exewidth{(235)}
+\include{formgram-gb3}
 % \include{formgram-gpsg}
 % \include{hpsg-formalismus}
 % \include{formgram-lfg}
