--- a/formgram-gb.tex
+++ b/formgram-gb.tex
@@ -122,8 +122,8 @@ $\to$ Researchers wanted to be more restrictive.
 \pause
 \item Grammars with general transformations correspond to PSGs with type 0 complexity \citep{PR73a-u}.
 \pause
-\item Transformations are not sufficiently restricted,\\Interactions are not tractable,\\
-      There have been problems with transformations deleting material (see \citew{Klenk2003a})
+\item Transformations are not sufficiently restricted,\\interactions are not tractable,\\
+      there have been problems with transformations deleting material (see \citew{Klenk2003a}).
 \pause
 \item $\to$ new theoretical approaches, Government \& Binding \citep{Chomsky81a}: restrictions for the form of grammar
   rules, elements can be connected to the position in a tree they were coming from, general
@@ -138,10 +138,12 @@ $\to$ Researchers wanted to be more restrictive.
 \frametitlefit{Hypothesis regarding language acquisition: Principles \& Paramaters}
 
 \begin{itemize}
-\item<+-> Some of our linguistics knowledge is innate.\\
+\item Some of our linguistics knowledge is innate.\\
           (Not all linguists agree with this assumption! Discussion: \citew{MuellerGT-Eng})
-\item<+-> Principles all linguistic structures have to obey
-\item<+-> These principles are parametrized $\to$ there is choice\\
+\pause
+\item Principles all linguistic structures have to obey
+\pause
+\item These principles are parametrized $\to$ there is choice\\
       A parameter may be set differently for different languages.
 
 \medskip
@@ -298,15 +300,15 @@ Lexicon + structures of \xbar syntax = base for D Structure
   by the valence frame:
 \eal
 \ex 
-\gll {}[dass] der Mann dem Kind das Buch gibt\\
+\gll {}[dass] der Mann dem Kind das Buch \alert{gibt}\\
      {}\spacebr{}that the.\NOM{} man the.\DAT{} woman the.\ACC{} book gives\\
 \glt `that the man gives the woman the book'
 \ex 
-\gll Gibt der Mann dem Kind das Buch?\\
+\gll \alert{Gibt} der Mann dem Kind das Buch?\\
 	 gives the.\NOM{} man the.\DAT{} woman the.\ACC{} book\\
 \glt `Does the man give the woman the book?'
 \ex 
-\gll Der Mann gibt dem Kind das Buch.\\
+\gll Der Mann \alert{gibt} dem Kind das Buch.\\
 	 the.\NOM{} man gives the.\DAT{} woman the.\ACC{} book\\
 \glt `The man gives the woman the book.'
 \zl
@@ -328,6 +330,7 @@ by principles.
 \item Relations between predicates and their arguments as determined by lexical entries must be
   recoverable on all representational levels for semantic interpretation.
 
+\pause
 \item
 $\to$ Starting place of moved elements is marked with traces.
 
@@ -348,6 +351,7 @@ $\to$ Starting place of moved elements is marked with traces.
 
 Different traces are marked by indices.\\
 Sometimes also \emph{e} for empty element and \emph{t} for trace.
+\pause
 
 \item
 \hypertarget{ss}{S Structure} is a surface"=like structure but should not be equated with the structure of actual utterances.
@@ -391,10 +395,12 @@ anaphoric reference (binding): what can pronouns refer to?
 \gll Peter kauft einen Tisch. Er gefällt ihm.\\
 	 Peter buys a table(\mas) he likes him\\
 \glt `Peter is buying a table. He likes it/him.'
+\pause
 \ex 
 \gll Peter kauft eine Tasche. Er gefällt ihm.\\
 	 Peter buys a bag(\fem) he likes him\\
 \glt `Peter is buying a bag. He likes it/him.'
+\pause
 \ex 
 \gll Peter kauft eine Tasche. Er gefällt sich.\\
 	 Peter buys a bag(\fem) he likes himself\\
@@ -411,10 +417,10 @@ anaphoric reference (binding): what can pronouns refer to?
 \begin{itemize}
 \item Quantification:
 \ea
-Every man loves a woman.
+Every dolphin attacks a shark.
 \z
-$\forall x \exists y (man(x) \to (woman(y) \wedge love(x,y))$\\
-$\exists y \forall x (man(x) \to (woman(y) \wedge love(x,y))$
+$\forall x \exists y (dolphin(x) \to (shark(y) \wedge attack(x,y))$\\
+$\exists y \forall x (dolphin(x) \to (shark(y) \wedge attack(x,y))$
 
 \item Some accounts try to derive the readings via movement of quantifiers in trees \citep{May85a-u}.
 \end{itemize}
@@ -434,15 +440,17 @@ How is the semantic role of the subject of the infinitive filled?
 
 \eal
 \ex 
-\gll Der Professor schlägt dem Studenten vor, die Klausur noch mal zu~~~~~~ schreiben.\\
+\gll Die Professorin schlägt der Studentin vor, die Klausur noch mal zu~~~~~~ schreiben.\\
      the professor suggests the student \textsc{part} the test once again to write\\
 \glt `The professor advises the student to take the test again.'
+\pause
 \ex 
-\gll Der Professor schlägt dem Studenten vor, die Klausur nicht zu bewerten.\\
+\gll Die Professorin schlägt der Studentin vor, die Klausur nicht zu bewerten.\\
 	 the professor suggests the student \textsc{part} the test not to grade\\
 \glt `The professor suggests to the student not to grade the test.'
+\pause
 \ex 
-\gll Der Professor schlägt dem Studenten vor, gemeinsam ins Kino zu gehen.\hspace{-3pt}\\
+\gll Die Professorin schlägt der Studentin vor, gemeinsam ins Kino zu gehen.\hspace{-3pt}\\
 	 the professor suggests the student \textsc{part} together into cinema to go\\
 \glt `The professor suggests to the student to go to the cinema together.'
 \zl
@@ -658,17 +666,17 @@ No assumptions about universality and innateness are made in most other theories
 Head determines the most important properties of a phrase.
 \eal
 \ex 
-\gll Kim \blaubf{schläft}.\\
+\gll Kim \alert{schläft}.\\
      Kim sleeps\\
 \ex 
-\gll Kim \blaubf{mag} Sandy.\\
+\gll Kim \alert{mag} Sandy.\\
      Kim likes Sandy\\
 \ex 
-\gll \blaubf{in} diesem Haus\\
+\gll \alert{in} diesem Haus\\
      in this  house\\
 \ex 
-\gll ein \blaubf{Haus}\\
-     a blue house\\
+\gll ein \alert{Haus}\\
+     a   house\\
 \zl
 
 
@@ -734,8 +742,8 @@ Nouns and prepositions are head-initial:
 
 \eal
 \ex
-\gll \alert{für} Marie\\
-	 for Marie\\
+\gll \alert{für} Maria\\
+	 for Maria\\
 \ex 
 \gll \alert{Bild} von Maria\\
 	 picture of Maria\\
@@ -978,6 +986,7 @@ Popular formulations:
 \item m-command: upwards and downwards at any dominating node but not higher than the next XP
 \end{itemize}
 
+\pause
 Exact version:
 \begin{description}
 \item[c-command] A c-commands B iff neither A dominates B nor B dominates A
